# mfem

./: CMakeLists.txt
config/: config.hpp.in_cmake
examples/: makefile
fem/: bilinearform.cpp  bilinearform.hpp  bilininteg.cpp  bilininteg.hpp  coefficient.hpp  datacollection.hpp  eltrans.hpp  fe.hpp  fe_coll.hpp  fespace.hpp  geom.hpp  gridfunc.hpp  intrules.hpp  linearform.hpp  lininteg.hpp  nonlinearform.hpp  nonlininteg.hpp  pbilinearform.cpp  pbilinearform.hpp  pfespace.cpp  pfespace.hpp  pgridfunc.cpp  pgridfunc.hpp  plinearform.cpp  plinearform.hpp  pnonlinearform.cpp  pnonlinearform.hpp
general/: array.hpp  communication.cpp  communication.hpp  error.hpp  hash.hpp  isockstream.hpp  mem_alloc.hpp  optparser.hpp  sets.hpp  socketstream.hpp  sort_pairs.hpp  tic_toc.hpp
linalg/: blockmatrix.hpp  blockoperator.hpp  blockvector.hpp  densemat.hpp  hypre.cpp  hypre.hpp  ode.hpp  solvers.hpp  sparsemat.cpp  sparsemat.hpp  sparsesmoothers.hpp
mesh/: element.hpp  hexahedron.hpp  mesh.cpp  mesh.hpp  mesquite.hpp  ncmesh.hpp  nurbs.hpp  pmesh.cpp  pmesh.hpp  point.hpp  quadrilateral.hpp  segment.hpp  tetrahedron.hpp  triangle.hpp  vertex.hpp
